# aurora-presentation

./: pyproject.toml  slides.md
docs/assets/: ogrodje.css
site/: index.html
