[tool.poetry]
name = "aurora-presentation"
version = "0.1.0"
description = ""
authors = ["Andraz Brodnik <brodul@brodul.org>"]
readme = "README.md"
packages = [{include = "aurora_presentation"}]

[tool.poetry.dependencies]
python = "^3.12"
mkslides = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
